# claude-token-provider

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  PRD.md  README.md  build.rs  sign-macos.bash  workflow.md
.github/workflows/: rust.yml
examples/: generate_constants.rs
src/: errors.rs  input.rs  lib.rs  main.rs  self_deletion.rs
src/config/: file_ops.rs  merger.rs  mod.rs  types.rs
src/crypto/: constants.rs  mod.rs
