[package]
name = "claude-token-provider"
version = "1.0.0"
edition = "2021"
rust-version = "1.88.0"

[dependencies]
# Cryptography
aes-gcm = "0.10"

# JSON manipulation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Base64 encoding/decoding
base64 = "0.22"

# Secure password input
rpassword = "7"

# Self-deletion functionality
self-replace = "1"

# Error handling
thiserror = "2"

# Optional utilities
dirs = "6"  # For cross-platform home directory

[dev-dependencies]
tempfile = "3"  # For testing file operations
