[package]
name = "claude-token-provider"
version = "1.1.0"
edition = "2021"
rust-version = "1.90.0"
build = "build.rs"

[dependencies]
# Cryptography
aes-gcm = "0"

# JSON manipulation
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Base64 encoding/decoding
base64 = "0"

# Secure password input
rpassword = "7"

# Self-deletion functionality
self-replace = "1"

# Error handling
thiserror = "2"

# Optional utilities
dirs = "6"  # For cross-platform home directory

[dev-dependencies]
tempfile = "3"  # For testing file operations

[build-dependencies]
rand = { version = "0", features = ["std", "os_rng"] }
sha3 = "0"
base64 = "0"
